<resources>
    <string name="app_name">Eterem</string>
    <string name="title_home">Home</string>
    <string name="login_bienvenida">¡Hola,\nbienvenido de nuevo!</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="restaurant_ad">Anuncio de restaurantes</string>
    <string name="go_to_place">Ir al lugar</string>
    <string name="tituloSugerencias">¿Qué se te antoja?</string>
    <string name="botonVerMas">Ver más</string>
    <string name="textoCuantoDinero">¿Con cuánto dinero cuentas?</string>
    <string name="textoCantidadDinero">Cantidad de dinero</string>
    <string name="botonVolver">Volver</string>
    <string name="botonAyuda">Ayuda</string>
    <string name="botonConfiguracion">Configuración</string>
    <string name="botonCerrarSesion">Cerrar sesión</string>
    <string name="usuario">Usuario</string>
    <string name="tu_estas_aqui">Tú estás aquí:</string>
    <string name="ubicacion">Ubicación</string>
    <string name="promociones">Promociones</string>
    <string name="barato">$</string>
    <string name="promedio">$$</string>
    <string name="caro">$$$</string>
    <string name="muyCaro">$$$$</string>
    <string name="botonDetalleLugar">Detalles</string>
    <string name="hint_nombre_de_usuario">Nombre de usuario</string>
    <string name="hint_contrasenia">Contraseña</string>
    <string name="olvidaste_contrasenia">¿Olvidaste tu contraseña?</string>
    <string name="no_tienes_cuenta">¿No tienes una cuenta?</string>
    <string name="pizza">Pizza</string>
    <string name="sushi">Sushi</string>
    <string name="tacos">Tacos</string>
    <string name="hamburguesa">Hamburguesa</string>
    <string name="boneless">Boneless</string>
    <string name="alitas">Alitas</string>
    <string name="descripcion_tacos_de_las_seis">Los tradicionales y mejores tacos dorados y al vapor de Ciudad Obregón, Sonora.</string>
    <string name="textoEjemplo">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce porttitorlacus bibendum viverra sagittis. Fusce congue, ex sit amet convallis mattis, nunc felis convallis massa, sit amet sagittis lorem turpis tristique elit. Phasellus consectetur vulputate tortor ac lobortis. Vestibulum et urna diam.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>