<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:id="@+id/layout_iniciar_sesion"
    android:padding="24dp"
    android:background="@drawable/fondo_naranja_gradient">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:src="@drawable/logoblanco"
        android:layout_marginTop="60dp" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/login_bienvenida"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="70dp">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:layout_gravity="left"
            android:hint="@string/hint_nombre_de_usuario"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:background="@drawable/custom_edit_text"
            android:textSize="15dp"
            android:paddingStart="10dp"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:layout_gravity="left"
            android:layout_marginTop="12dp"
            android:hint="@string/hint_contrasenia"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:background="@drawable/custom_edit_text"
            android:textSize="15dp"
            android:paddingStart="10dp"/>

        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:text="@string/olvidaste_contrasenia"
            android:textColor="@color/white" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_iniciar_sesion"
        android:layout_width="120dp"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:text="Iniciar"
        android:layout_marginTop="40dp"
        android:textColor="@color/white"
        android:background="@drawable/custom_button_iniciar"/>

    <TextView
        android:id="@+id/tv_no_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/no_tienes_cuenta"
        android:layout_marginTop="15dp"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/text_registrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Registrarme"
        android:layout_marginTop="5dp"
        android:textColor="@color/white" />

</LinearLayout>