<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp"
        android:layout_height="100dp"
        android:background="@color/light_gray">
        <ImageView
            android:id="@+id/view_opciones"
            android:layout_width="57dp"
            android:layout_height="52dp"
            android:layout_marginTop="35dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/tresbarras"/>
        <ImageView
            android:id="@+id/logo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="108dp"
            android:src="@drawable/logo"/>
        <View
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="34dp"
            android:layout_marginLeft="110dp"
            android:background="@drawable/perfil"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="25dp"
            android:text="@string/tu_estas_aqui"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textColor="@color/black" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="25dp"
            android:text="@string/ubicacion"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="330dp"
        android:layout_height="530dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        android:background="@drawable/fondo_menu_que_se_antoja">

        <ImageButton
            android:id="@+id/view_cerrar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="280dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/ic_close"/>
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28dp"
            android:textStyle="bold"
            android:text="@string/tituloSugerencias"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:layout_marginTop="10dp" />
        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/pizza"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/pizza"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:layout_marginLeft="4dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="22dp"
                    android:layout_marginRight="22dp">
                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/sushi" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sushi"
                        android:layout_gravity="center"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/taco" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tacos"
                        android:layout_gravity="center"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="20dp">
                <LinearLayout
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_marginRight="10dp">
                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/hamburguesa" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hamburguesa"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginRight="22dp">
                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/boneless" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/boneless"
                        android:layout_gravity="center"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/alitas" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/alitas"
                        android:layout_gravity="center"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/text_cuanto_dinero_tienes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="15dp"
            android:textStyle="bold"
            android:text="@string/textoCuantoDinero"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:layout_marginTop="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/barato"
                android:textColor="@color/white"
                android:paddingRight="70dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/caro"
                android:textColor="@color/white"
                android:paddingRight="70dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/muyCaro"
                android:textColor="@color/white"/>
        </LinearLayout>

        <com.google.android.material.slider.Slider
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:value="50"
            android:valueFrom="0"
            android:valueTo="300"
            app:thumbColor="@color/light_gray"
            app:trackColorActive="@color/white"
            android:layout_marginTop="-10dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_menu_ir"
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:text="Ir"
            android:layout_marginTop="40dp"
            android:textColor="@color/white"
            android:background="@drawable/custom_button_iniciar"/>

    </LinearLayout>

</LinearLayout>