<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frame_inicio"
    android:orientation="vertical"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp"
        android:layout_height="100dp"
        android:background="@color/light_gray">
        <ImageView
            android:id="@+id/view_opciones"
            android:layout_width="57dp"
            android:layout_height="52dp"
            android:layout_marginTop="35dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/tresbarras"/>
        <ImageView
            android:id="@+id/logo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="108dp"
            android:src="@drawable/logo"/>
        <View
            android:id="@+id/view_perfil"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="34dp"
            android:layout_marginLeft="110dp"
            android:background="@drawable/perfil"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="25dp"
            android:text="@string/tu_estas_aqui"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textColor="@color/black" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="25dp"
            android:text="@string/ubicacion"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="1.2"
            android:scaleY="1.2"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:scaleType="center"
            android:src="@drawable/lostacosdelasseis" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
            <!--            LAYOUT PARA ESTRELLAS-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:layout_height="20dp"
                android:layout_marginLeft="35dp">
                <View
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/ic_star"/>
                <View
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/ic_star"/>
                <View
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/ic_star"/>
                <View
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/ic_star"/>
                <View
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/ic_star"/>
            </LinearLayout>
            <!--            LAYOUT PARA EL PRECIO-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:orientation="horizontal"
                android:layout_marginLeft="210dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/promedio"/>
            </LinearLayout>

        </LinearLayout>
        <!--        LAYOUT DESCRIPCIÓN LUGAR-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_marginLeft="35dp"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:text="@string/textoEjemplo"/>
                <!--                LAYOUT BOTON DETALLES LUGAR-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_detalle_lugar"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:textSize="12sp"
                        android:layout_gravity="center"
                        android:layout_marginTop="3dp"
                        android:text="@string/botonDetalleLugar"
                        android:background="@drawable/custom_button_detalles"
                        android:textColor="@color/black"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="1.2"
            android:scaleY="1.2"
            android:layout_marginTop="25dp"
            android:layout_gravity="center"
            android:scaleType="center"
            android:src="@drawable/verandaborderedondo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
            <!--            LAYOUT PARA ESTRELLAS-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:layout_height="20dp"
                android:layout_marginLeft="35dp">
                <View
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/ic_star"/>
                <View
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/ic_star"/>
                <View
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/ic_star"/>
                <View
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/ic_star"/>
                <View
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/ic_star"/>
            </LinearLayout>
            <!--            LAYOUT PARA EL PRECIO-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:orientation="horizontal"
                android:layout_marginLeft="210dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/promedio"/>
            </LinearLayout>

        </LinearLayout>
        <!--        LAYOUT DESCRIPCIÓN LUGAR-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_marginLeft="35dp"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:text="@string/textoEjemplo"/>
                <!--                LAYOUT BOTON DETALLES LUGAR-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <androidx.appcompat.widget.AppCompatButton
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:textSize="12sp"
                        android:layout_gravity="center"
                        android:layout_marginTop="3dp"
                        android:text="@string/botonDetalleLugar"
                        android:background="@drawable/custom_button_detalles"
                        android:textColor="@color/black"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>